Fix Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--bg);
+    overflow-x: hidden;
 }
 
 #projects {
